fix page twig banner needs conditional.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -12,7 +12,7 @@
 			{% block header %}
 				<div class="wrapper">
 					<div class="banner">
-					<img src="{{ theme.link }}/images/hpnews-banner.jpg" alt="Highland Park, New Jersey News Banner" />
+leoraw banner is it a page or is it a blog post?
 					</div>
 					<h1 class="logo" role="banner">
 						<a class="logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
