--- a/templates/page.twig
+++ b/templates/page.twig
@@ -10,7 +10,7 @@
 				</div>
 			</section>
 
-			{% include 'boxes.twig' %} 
+			{# {% include 'boxes.twig' %}  #}
 
 		</article>
 	</div><!-- /content-wrapper -->
