base-home twig for home and store pages.

--- a/templates/base-home.twig
+++ b/templates/base-home.twig
@@ -12,9 +12,7 @@
 			{% block header %}
 				<div class="wrapper">
 					<div class="banner">
-						<div id="headerspot">
-							<a href="/"><img src="{{theme.path}}/images/sketching-out.jpeg" width="982" height="192" alt="Sketching Out Blog, leoraw dot com"></a>
-						</div>
+						home banner
 
 					</div>
 					<h1 class="logo" role="banner">
