--- a/templates/home.twig
+++ b/templates/home.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "base-home.twig" %}
 
 {% block head %}
     <meta property="og:title" value="{{ post.title }}" />
