--- a/style.css
+++ b/style.css
@@ -856,6 +856,11 @@ object {
   width: 100%;
 }
 
+.content-wrapper, .banner {
+  width: 960px;
+  margin: 0 auto;
+}
+
 .site-main {
   margin: 0 25% 0 0;
   padding-left: 20px;
