--- a/templates/base.twig
+++ b/templates/base.twig
@@ -18,10 +18,10 @@
 
 					</div>
 					<h1 class="logo" role="banner">
-						<a class="logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
+						<a class="logo-link" href="{{site.url}}" rel="home">Sketching Out Blog</a>
 					</h1>
 					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'items': main.get_items} %}
+						{% include "menu.twig" with {'items': blog.get_items} %}
 					</nav><!-- #nav -->
 				</div>
 			{% endblock %}
