art content type spot for tagline in blog.

--- a/templates/base.twig
+++ b/templates/base.twig
@@ -18,7 +18,7 @@
 
 					</div>
 					<h1 class="logo" role="banner">
-						<a class="logo-link" href="{{site.url}}" rel="home">Sketching Out Blog</a>
+						<a class="logo-link" href="{{site.url}}" rel="home">Sketching Out Blog</a> -- more here blog tagline
 					</h1>
 					<nav id="nav-main" class="nav-main" role="navigation">
 						{% include "menu.twig" with {'items': blog.get_items} %}
