--- a/templates/single.twig
+++ b/templates/single.twig
@@ -1,4 +1,4 @@
-{% extends "base.twig" %}
+{% extends "base-blog.twig" %}
 {% import 'partial/macros.twig' as macros %}
 {% block head %}
     <meta property="og:title" value="{{ post.title }}" />
