footer styling twig tweaks.

--- a/style.css
+++ b/style.css
@@ -1477,7 +1477,7 @@ MAIN NAVIGATION #b9b9b9 #6a6a6a 474747
 
 .menu-footer-container ul {
   padding-left: 0;
-  margin-top: 20px;
+  margin-top: 0;
   margin-bottom: 0;
 }
 
