--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,4 +1,1 @@
-
-{% include "menu.twig" with {'items': footer.get_items} %} 
-
-<p class="copy">Copyright {{"now"|date('Y')}}</p>
+<div class="menu-footer-container">{% include "menu.twig" with {'items': footer.get_items} %} </div>
