main-navigation added to blog, figuring single-art twig.

--- a/templates/base-blog.twig
+++ b/templates/base-blog.twig
@@ -17,7 +17,7 @@
 						</div>
 
 					</div>
-					<nav id="nav-main" class="nav-main" role="navigation">
+					<nav id="nav-main" class="main-navigation" role="navigation">
 						{% include "menu.twig" with {'items': blog.get_items} %}
 					</nav><!-- #nav -->
 				</div>
