--- a/templates/base-blog.twig
+++ b/templates/base-blog.twig
@@ -8,6 +8,7 @@
 
 	<body class="{{body_class}}" data-template="base.twig">
 		<a class="skip-link screen-reader-text" href="#content">{{ _e( 'Skip to content') }}</a>
+		<div id="page">
 		<header class="header" >
 			{% block header %}
 				<div class="wrapper">
@@ -37,7 +38,7 @@
 				</aside>
 			{% endif %}
 		</section>
-
+		</div>
 		{% block footer %}
 			<footer id="footer">
 				{% include 'footer.twig' %}
@@ -49,5 +50,6 @@
 			</footer>
 			{{ function('wp_footer') }}
 		{% endblock %}
+
 	</body>
 </html>
