--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,16 @@
-<div class="menu-footer-container">{% include "menu.twig" with {'items': footer.get_items} %} </div>
+<footer id="footer" class="leoraw-footer site-footer">
+			<div class="container">
+			<p>&copy; {{"now"|date('Y')}} All images and text ©Leora Wenger (unless otherwise noted) </p>
+			<div class="menu-social-menu-container">{% include "menu.twig" with {'items': social.get_items} %}</div>
+				<div class="menu-footer-container">{% include "menu.twig" with {'items': footer.get_items} %} </div>
+				{% if sidebar %}
+				<aside class="layout-sidebar">
+					{{sidebar}}
+				</aside>
+				{% endif %}
+				</div>
+
+
+
+			</footer>
+			{{ function('wp_footer') }}
