--- a/templates/base.twig
+++ b/templates/base.twig
@@ -37,8 +37,8 @@
 							</div>
 					</div>
 					<div class="site-branding">
-					<div class="wrap"
-					<h2 class="site-branding-text" role="banner">
+					<div class="wrap">
+					<h2 class="site-branding-text m-0" role="banner">
 						{{site.name}}
 					</h2>
 					<p class="site-description">{{site.description}}</p></div></div>
