--- a/templates/base-art.twig
+++ b/templates/base-art.twig
@@ -32,7 +32,7 @@
 				</div>
 					<div class="custom-header">
 					<div class="site-branding">
-					<div class="wrap"
+					<div class="wrap">
 					<h2 class="site-branding-text" role="banner">
 						{{site.name}}
 					</h2>
