--- a/templates/single.twig
+++ b/templates/single.twig
@@ -7,17 +7,19 @@
 {% endblock %}
 
 {% block content %}
-	<div class="content-wrapper">
+	<div class="content-wrapper flex">
 		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-			<div class="article-header"><img src="{{ post.thumbnail.src|resize(1200, 300) }}"></div>
-			<section class="article-content">
-				<h1 class="article-h1">{{ post.title }}</h1>
-				<div class="article-body">
-					{{post.content}}
-				</div>
-				<div class="article-entry-footer">{{ macros.post_terms( post ) }}</div>
+				<div class="article-header"><img src="{{ post.thumbnail.src|resize(1200, 300) }}"></div>
+				<section class="article-content">
+					<h1 class="article-h1">{{ post.title }}</h1>
+					<div class="article-body">
+						{{post.content}}
+					</div>
+					<div class="article-entry-footer">{{ macros.post_terms( post ) }}</div>
 
-			</section>
+				</section>
 		</article>
+		<div>{% include 'sidebar.twig' %}</div>
 	</div><!-- /content-wrapper -->
+	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
