--- a/templates/base-blog.twig
+++ b/templates/base-blog.twig
@@ -27,7 +27,7 @@
 			{% endblock %}
 		</header>
 
-		<section id="content" role="main" class="content-wrapper flex">
+		<section id="content" role="main" class="content-wrapper flex flex-wrap">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}} leoraw-posts">
 				{% block content %}
