sidebar2 started for art content type.

--- a/templates/base-art.twig
+++ b/templates/base-art.twig
@@ -49,9 +49,9 @@
 					Sorry, no content
 				{% endblock %}
 			</div>
-			{% if sidebar %}
+			{% if sidebar2 %}
 				<aside class="layout-sidebar">
-					{{sidebar}}
+					{{sidebar2}}
 				</aside>
 			{% endif %}
 			</div>
