--- a/templates/artcat.twig
+++ b/templates/artcat.twig
@@ -5,7 +5,7 @@
   {# see `base.twig:27` for where this block's content will be inserted #}
   <div class="content-wrapper">
     {% for post in posts %}
-      {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
+      {% include ['tease-'~post.post_type~'.twig', 'tease-art.twig'] %}
     {% endfor %}
 
     {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
