artcat with header on archive page.

--- a/templates/artcat.twig
+++ b/templates/artcat.twig
@@ -3,6 +3,8 @@
 
 {% block content %}
   {# see `base.twig:27` for where this block's content will be inserted #}
+  
+  <h1>{{wp_title}}</h1>
   <div class="content-wrapper">
     {% for post in posts %}
       {% include ['tease-'~post.post_type~'.twig', 'tease-art.twig'] %}
@@ -10,4 +12,5 @@
 
     {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
   </div>
+  {# {{ dump() }} #}
 {% endblock %}
