--- a/templates/tease-art.twig
+++ b/templates/tease-art.twig
@@ -3,15 +3,14 @@
 {% block content %}
 
 	<h2 class="h2"><a href="{{post.link}}">{{post.title}}</a></h2>
-    tease-art
 	{% if post.thumbnail.src %}
 		<div>
-			<p>{{post.preview.length(25)}}</p>
+			<p>{{post.content}}</p>
 
 			<img src="{{post.thumbnail.src}}"/>
 		</div>
 	{% else %}
-		<p>{{post.preview.length(25)}}</p>
+
 		<p>{{post.content}}</p>
 	{% endif %}
 		
