comments tweaking twig.

--- a/templates/single.twig
+++ b/templates/single.twig
@@ -19,14 +19,14 @@
 
 		</section>  
 		<div class="comments">
-		<h2>Please leave a comment! I love to hear from you.</h2>
    		 {% for comment in post.comments %}
-	
-      <article class="comment" id="comment-{{ comment.id }}">
+					{% include 'comment.twig' %}
+      {# <article class="comment" id="comment-{{ comment.id }}">
       	<h5 class="comment-author">{{ comment.author.name }} says</h5>
         {{ comment.content }}
-      </article>
+      </article> #}
     {% endfor %}
+		<h3>Please leave a comment! I love to hear from you.</h3>
     {{ function('comment_form') }}
   </div>
 
