--- a/style.css
+++ b/style.css
@@ -733,12 +733,32 @@ a:active {
 /*--------------------------------------------------------------
 10.3 Comments
 --------------------------------------------------------------*/
+.comments {
+  border-top: 1px solid #333;
+  margin-right: 30px;
+}
+
 .comment-content a {
   word-wrap: break-word;
 }
 
 .bypostauthor {
   display: block;
+}
+
+.comment {
+  padding: 10px;
+}
+
+.comment-list .bypostauthor {
+  background-color: #eeeeee;
+  border-radius: 10px;
+  padding: 3px 5px 3px 10px;
+}
+
+.comment h5 {
+  font-size: 1.5rem;
+  font-weight: 700;
 }
 
 /*--------------------------------------------------------------
