--- a/templates/comment-form.twig
+++ b/templates/comment-form.twig
@@ -1,17 +1,17 @@
-<div class="comment-form">
+<div class="comment-form reply-form">
     <form class="comment-form" method="post" action="{{ site.site_url~'/wp-comments-post.php' }}">
         {% if  user %}
             <input type="hidden" name="email" value="{{ user.email }}">
             <input type="hidden" name="author" value="{{ user.name }}">
             <input type="hidden" name="url" value="{{ user.link }}">
         {% else %}
-            <label>Email<br>
+            <label>Email:<br />
                 <input required name="email" type="email" id="email">
             </label>
-            <label>Name<br>
+            <label>Name:<br />
                 <input required name="author" type="text">
             </label>
-            <label>Website<br>
+            <label>Website: (optional)<br />
                 <input name="url" type="url">
             </label>
         {% endif %}
@@ -21,6 +21,5 @@
         <input name="comment_post_ID" value="{{ post.id }}" type="hidden">
         <input name="comment_parent"  value="{{ comment.ID|default('0') }}" type="hidden">
         <button type="submit" name="Submit" class="btn">Send</button>
-        <button type="reset">Cancel</button>
     </form>
 </div>
