--- a/style.css
+++ b/style.css
@@ -790,6 +790,8 @@ ul.children li {
   align-items: flex-start;
 }
 
+#reply-title {display: none;}
+
 /*--------------------------------------------------------------
 11.0 Infinite scroll
 --------------------------------------------------------------*/
