--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -1,8 +1,18 @@
 {# This file demonstrates using most of the index.twig template and modifying 
    just a small part. See `search.twig` for an example of another approach #}
 
-{% extends "blog.twig" %}
+{% extends "base-blog.twig" %}
 
 {% block content %}
-  {{ parent() }}
+  {# see `base.twig:27` for where this block's content will be inserted #}
+  
+  <h1>{{wp_title}}</h1>
+  <div class="content-wrapper">
+    {% for post in posts %}
+      {% include ['tease-'~post.post_type~'.twig', 'tease-blog.twig'] %}
+    {% endfor %}
+
+    {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+  </div>
+  {# {{ dump() }} #}
 {% endblock %}
