--- a/style.css
+++ b/style.css
@@ -931,7 +931,7 @@ object {
   width: 100%;
 }
 
-.content-wrapper{
+.content-wrapper {
   width: 100%;
   padding: 0 20px;
 }
@@ -1785,9 +1785,12 @@ button.cupid-blue:active {
   line-height: 1.1;
 }
 
-.page h1,
-.home.page h2 {
+.page h1 {
   font-size: 3rem;
+}
+
+h2.site-branding-text {
+  font-size: 2.5rem;
 }
 
 .home.page h1 {
@@ -1886,6 +1889,10 @@ button.cupid-blue:active {
 
 .leoraw-box-image img {
   max-height: 120px;
+}
+
+.px-20 {
+  padding: 0 20px;
 }
 
 .mobile-button-wrapper {
@@ -2004,7 +2011,7 @@ button.cupid-blue:active {
   }
 
   .post-type-page {
-    padding: 0 20px;
+    padding: 0;
   }
 
   .art-content.wrap {
