ver=123 in html-header, box-image center.

--- a/templates/boxes.twig
+++ b/templates/boxes.twig
@@ -5,7 +5,7 @@
   <div class="leoraw-box-wrap"><div class="leoraw-box">
     <h2 class="leoraw-box-title">{{ box.box_title }}</h2>
     {% if box.image_boxed.url %}
-    <div class="leoraw-image-container">
+    <div class="leoraw-image-container leoraw-box-image">
       <img src="{{ box.image_boxed.url }}" class="hp-thumb-class" alt="{{ box.box_title }}" />
     </div>
     {% endif %}
