search, 404, author, attachment.

--- a/templates/404.twig
+++ b/templates/404.twig
@@ -1,5 +1,6 @@
-{% extends "base.twig" %}
+{% extends "base-blog.twig" %}
 
 {% block content %}
 	Sorry, we couldn't find what you're looking for.
+	<div><img src="{{ site.theme.link }}/images/oops.jpeg" alt="oops error 404 page does not exist try a menu" /></div>
 {% endblock %}
