--- a/templates/search.twig
+++ b/templates/search.twig
@@ -1,8 +1,7 @@
 {# see `archive.twig` for an alternative strategy of extending templates #}
-{% extends "base.twig" %}
+{% extends "base-blog.twig" %}
 
 {% block content %}
-  {# see `base.twig:27` for where this block's content will be inserted #}
   <div class="content-wrapper">
     {% for post in posts %}
       {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
