--- a/templates/base-art.twig
+++ b/templates/base-art.twig
@@ -42,7 +42,7 @@
 		</header>
 
 		<section id="content" role="main" class="site-main">
-		<div class="wrap flex art-content">
+		<div class="wrap flex flex-wrap art-content">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
 				{% block content %}
