--- a/templates/base-art.twig
+++ b/templates/base-art.twig
@@ -15,19 +15,23 @@
 				<div class="wrap">
 						<div class="mobile-button-wrapper">
 							<a href="https://www.leoraw.com/" class="custom-logo-link" rel="home" aria-current="page"><img width="250" height="250" src="https://www.leoraw.com/wp-content/uploads/2021/10/cropped-leoraw-logo-402x402-1.jpg" class="custom-logo" alt="Leora Wenger" decoding="async" srcset="https://www.leoraw.com/wp-content/uploads/2021/10/cropped-leoraw-logo-402x402-1.jpg 250w, https://www.leoraw.com/wp-content/uploads/2021/10/cropped-leoraw-logo-402x402-1-150x150.jpg 150w, https://www.leoraw.com/wp-content/uploads/2021/10/cropped-leoraw-logo-402x402-1-100x100.jpg 100w" sizes="(max-width: 250px) 100vw, 250px"></a>
-								<button type="button" class="button navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-controls="top-menu" aria-expanded="false">
+								<button type="button" class="button navbar-toggle collapsed" data-toggle="collapse" data-target="#top-menu" aria-controls="top-menu" aria-expanded="false" id="leoraw-button">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 								</button>
-
-						  <nav id="site-navigation" class="page-navigation" role="navigation" aria-label+"Primary Menu">
+						</div>
+						<nav id="mobile-menu" class="page-navigation" role="navigation" aria-label+"Primary Menu">
+								<div class="menu-primary-menu-container">
+									{% include "menu.twig" with {'items': primary.get_items} %}
+								</div>
+						</nav>
+						<nav id="site-navigation" class="page-navigation" role="navigation" aria-label+"Primary Menu">
 								<div class="menu-primary-menu-container">
 								{% include "menu.twig" with {'items': primary.get_items} %}
 								</div>
-						  </nav><!-- #nav -->
-							</div>
+						</nav><!-- #nav -->
 					  </div>
 				</div>
 					<div class="custom-header">
