--- a/templates/home.twig
+++ b/templates/home.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+		<article class="post-type-{{ post.post_type }} px-20" id="post-{{ post.ID }}">
 			<section class="article-content">
 				<h1 class="article-h1">{{ post.title }}</h1>
 				<div class="article-body">
