--- a/templates/base-blog.twig
+++ b/templates/base-blog.twig
@@ -38,7 +38,7 @@
 			{% endblock %}
 		</header>
 
-		<section id="content" role="main" class="content-wrapper flex flex-wrap">
+		<section id="content" role="main" class="content-wrapper flex flex-wrap justify-btwn">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}} leoraw-posts">
 				{% block content %}
