pagination justify and started art link.

--- a/templates/archive.twig
+++ b/templates/archive.twig
@@ -13,5 +13,5 @@
 
     {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
   </div>
-  {# {{ dump() }} #}
+  {# {{ dump(posts) }}  #}
 {% endblock %}
