--- a/templates/partial/pagination.twig
+++ b/templates/partial/pagination.twig
@@ -1,5 +1,5 @@
 {% if posts.pagination.pages is not empty %}
-<div class="tool-pagination">
+<div class="tool-pagination flex justify-btwn">
     {% if posts.pagination.next %}
 		<a href="{{posts.pagination.next.link}}" class="next {{posts.pagination.next.link|length ? '' : 'invisible'}}">Previous</a>
 	{% endif %}
