--- a/templates/base-art.twig
+++ b/templates/base-art.twig
@@ -50,7 +50,7 @@
   Current Url:  {{ dump(current_url) }}
 </pre> #}
 		{% if current_url != 'art' %}
-			<div class="wrap art-content breadcrumb">>&nbsp;<a href="/art">Art database</a>
+			<div class="wrap art-content breadcrumb">>&nbsp;<a href="/art">Art database</a></div>
 		{% endif %}
 		<div class="wrap flex flex-wrap art-content">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
