pagination to artcat archive.

--- a/templates/artcat.twig
+++ b/templates/artcat.twig
@@ -10,7 +10,7 @@
       {% include ['tease-'~post.post_type~'.twig', 'tease-art.twig'] %}
     {% endfor %}
 
-    {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
+    {% include 'partial/pagination-archive.twig' with { pagination: pagination } %}
   </div>
   {# {{ dump() }} #}
 {% endblock %}
