update to composer readme css.

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
  * Theme Name: leoraw Timber
  * Description: Starter Theme to use with Timber
  * Author: Leora Wenger
+ * Version: 1.0.2
 */
 
 html {
