add in changes for timber 2.0.

--- a/templates/menu.twig
+++ b/templates/menu.twig
@@ -1,4 +1,4 @@
-{% if main %}
+{# {% if main %} #}
 	<ul>
 	{% for item in items %}
 		<li class="{{ item.classes | join(' ') }}">
@@ -7,4 +7,4 @@
 		</li>
 	{% endfor %}
 	</ul>
-{% endif %}
+{# {% endif %} #}
