--- a/templates/base-search.twig
+++ b/templates/base-search.twig
@@ -39,7 +39,7 @@
 		</header>
 
 		<section id="content" role="main" class="content-wrapper flex flex-wrap justify-btwn">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
+			{# {% if title %}<h1>{{title}}</h1>{% endif %} #}
 			<div class="wrapper {{sidebar_class}} leoraw-posts">
 				{% block content %}
 					Sorry, no content
