--- a/templates/base.twig
+++ b/templates/base.twig
@@ -24,12 +24,12 @@
 						</div>
 							<nav id="mobile-menu" class="page-navigation" role="navigation" aria-label+"Primary Menu">
 								<div class="menu-primary-menu-container">
-									{% include "menu.twig" with {'items': primary.get_items} %}
+									{% include "menu-primary.twig" with {'items': primary.get_items} %}
 								</div>
 							</nav>
 						  <nav id="site-navigation" class="page-navigation" role="navigation" aria-label+"Primary Menu">
 								<div class="menu-primary-menu-container">
-								{% include "menu.twig" with {'items': primary.get_items} %}
+								{% include "menu-primary.twig" with {'items': primary.get_items} %}
 								</div>
 						  </nav><!-- #nav -->
 
