--- a/templates/menu-blog.twig
+++ b/templates/menu-blog.twig
@@ -1,5 +1,5 @@
-{% if main %}
-	<ul>
+{% if blog %}
+<ul>
 	{% for item in items %}
 		<li class="{{ item.classes | join(' ') }}">
 			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
