Added comment_author_url to comment on blog.

--- a/templates/comment.twig
+++ b/templates/comment.twig
@@ -1,5 +1,13 @@
 <div class="blog-comment {{comment.comment_type}}" id="blog-comment-{{comment.ID}}">
-	<h5 class="comment-author">{{comment.author.name}} says</h5>
+	<h5 class="comment-author">
+		{% if comment.comment_author_url %}
+			<a href="{{ comment.comment_author_url}}">
+		{% endif %}
+	{{comment.author.name}}
+		{% if comment.comment_author_url %}
+		</a>
+		{% endif %}
+	says</h5>
 	<div class="comment-content">{{comment.comment_content|wpautop}}</div>
 
 	<section class="comment-box">
